--- a/BFN/businessrules01.html
+++ b/BFN/businessrules01.html
@@ -427,7 +427,8 @@
                             <td class="content_white" style="text-align:left;">
                                [some action(s) here.]<br />
                                THEN Y<br />
-                               AND THEN Z
+                               AND Z
+                               AND W
                             </td>
                         </tr>
                     </table>
