git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6873 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-schedule.html
+++ b/kra-com-dev/irb-schedule.html
@@ -185,6 +185,18 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </td>
               </tr>
               <tr>
+                <th><div align="right">Duration:</div></th>
+                <td><select name="select3" id="select2">
+                  <option>select</option>
+                  <option>30 minutes</option>
+                  <option>1 hour</option>
+                  <option>1.5 hours</option>
+                  <option>2 hours</option>
+                  <option>2.5 hours</option>
+                  <option>3 hours</option>
+                </select></td>
+              </tr>
+              <tr>
                 <th><div align="right">Place:</div></th>
                 <td><input name="startDate3" type=text onchange="dataChanged()" value="" size=12 /></td>
               </tr>
