--- a/BFN/businessrules02.html
+++ b/BFN/businessrules02.html
@@ -128,7 +128,7 @@
     <tr>
         <td class="toppanelhead1">&nbsp;</td>
         <td class="toppanelhead2">
-            Context (BFN: add 'Agenda' for each context)
+            Namespace (BFN: add 'Agenda' for each context)
         </td>
         <td class="toppanelhead3">
             <img id="control_panelcontent01" src="../images/tinybutton-hide.gif" alt="hide" style="width:45px; height:15px; border:none;" />
