--- a/BFN/businessrules02.html
+++ b/BFN/businessrules02.html
@@ -985,10 +985,10 @@
                             <td class="content_white">
                             	<select style="width:100%;">
                                     <option value="0">select</option>
-                                    <option value="1">IRB</option>
+                                    <option value="1" selected="selected">IRB</option>
                                     <option value="2">IACUC</option>
                                     <option value="3">Conflict of Interest</option>
-                                    <option value="4" selected="selected">Proposals</option>
+                                    <option value="4">Proposals</option>
                                 </select>
                             </td>
                         </tr>
