--- a/kra-coi-com-dev/irb-meeting.html
+++ b/kra-coi-com-dev/irb-meeting.html
@@ -178,12 +178,6 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
                 <td><input name="jk01" type="text" style="width:97%;" value="13:00" /></td>
               </tr>
               <tr>
-                <th style="text-align:right;"> Max Protocols: </th>
-                <td><input name="jk03" type="text" style="width:97%;" value="50" /></td>
-                <th style="text-align:right;"> *Deadline: </th>
-                <td><input type="text" style="width:97%;" name="jk02" value="05/10/2009" /></td>
-              </tr>
-              <tr>
                 <th style="text-align:right;"> Agenda Generation: </th>
                 <td> 05/18/2009 </td>
                 <th style="text-align:right;"> Status: </th>
@@ -225,7 +219,7 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
           <!-- Tabbed Panel Head: Protocols Submitted -->
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Protocols Submitted</td>
+              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >COI Disclosures</td>
               <td class="tabtable2-mid"><span id="showblue"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0></span></td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -238,20 +232,16 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
             <table cellpadding=0 cellspacing="0"  summary="">
               <tr>
                 <th>&nbsp;</th>
-                <th valign="top">Protocol No<br></th>
+                <th valign="top">Disclosure No<br></th>
                 <th valign="top">PI<br></th>
-                <th valign="top">Protocol Title<br></th>
-                <th valign="top">Submission Type<br></th>
-                <th valign="top" >Sub. Type Qualifier<br></th>
-                <th valign="top">Sub. Review Type<br></th>
+                <th valign="top">Disclosure Type<br></th>
+                <th valign="top"> Event<br></th>
                 <th valign="top">Submission Status<br></th>
                 <th valign="top">Submission Date<br></th>
                 <th>Action</th>
               </tr>
               <tr>
                 <th>&nbsp;</th>
-                <td class="infoline"><div align="center"><img src="../images/sort-arrows.gif" width="15" height="16" alt="sort"></div></td>
-                <td class="infoline"><div align="center"><img src="../images/sort-arrows.gif" width="15" height="16" alt="sort"></div></td>
                 <td class="infoline"><div align="center"><img src="../images/sort-arrows.gif" width="15" height="16" alt="sort"></div></td>
                 <td class="infoline"><div align="center"><img src="../images/sort-arrows.gif" width="15" height="16" alt="sort"></div></td>
                 <td class="infoline"><div align="center"><img src="../images/sort-arrows.gif" width="15" height="16" alt="sort"></div></td>
@@ -268,8 +258,6 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
                     <input src="../images/book_open.png" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" /></td>
                   <td> Super Duper Protocol for Nano Research </td>
                   <td> Amendment </td>
-                  <td> Amendment </td>
-                  <td> Full </td>
                   <td> In Agenda </td>
                   <td> 03/30/2009 </td>
                   <td style="text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the resulting protocol on the Protocol Actions tab, not the Protocol tab.'); return false" class="tinybutton" alt="view" title="View" type="image" /></td>
@@ -281,8 +269,6 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
                     <input src="../images/book_open.png" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" /></td>
                   <td> Normal Duper Protocol for Nano Research </td>
                   <td> Amendment </td>
-                  <td> Amendment </td>
-                  <td> Full </td>
                   <td> In Agenda </td>
                   <td> 03/30/2009 </td>
                   <td style="text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the resulting protocol on the Protocol Actions tab, not the Protocol tab.'); return false" class="tinybutton" alt="view" title="View" type="image" /></td>
@@ -294,8 +280,6 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
                     <input src="../images/book_open.png" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" /></td>
                   <td> Less Duper Protocol for Nano Research </td>
                   <td> Amendment </td>
-                  <td> Amendment </td>
-                  <td> Full </td>
                   <td> In Agenda </td>
                   <td> 03/30/2009 </td>
                   <td style="text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the resulting protocol on the Protocol Actions tab, not the Protocol tab.'); return false" class="tinybutton" alt="view" title="View" type="image" /></td>
@@ -307,8 +291,6 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
                     <input src="../images/book_open.png" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" /></td>
                   <td> Not Duper Protocol for Nano Research </td>
                   <td> Amendment </td>
-                  <td> Amendment </td>
-                  <td> Full </td>
                   <td> In Agenda </td>
                   <td> 03/30/2009 </td>
                   <td style="text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the resulting protocol on the Protocol Actions tab, not the Protocol tab.'); return false" class="tinybutton" alt="view" title="View" type="image" /></td>
