--- a/menu/kra_devref/researcher2.html
+++ b/menu/kra_devref/researcher2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
+
 <head>
 <title>Kuali</title>
 <link href="../css/portal.css" rel="stylesheet" type="text/css">
@@ -12,7 +13,8 @@ function MM_popupMsg(msg) { //v1.0
   alert(msg);
 }
 //-->
-</script></head>
+</script>
+</head>
 <body>
 <form  method="post" action="">
   <div id="header">
@@ -32,186 +34,186 @@ function MM_popupMsg(msg) { //v1.0
     <input name="textfield" type="text" size="12" class="loginbox">
     <input class="go" type="submit" name="Submit" value="login">
   </div>
-  <div id="tabs" class="tabposition">    <ul>
+  <div id="tabs" class="tabposition">
+    <ul>
       <li class="red"><a class="red" href="../kra_devref/researcher2.html">Researcher</a></li>
       <li class="green"><a class="green" href="../kra_devref/dept.html">Unit</a></li>
       <li class="green"><a class="green" href="../kra_devref/centad.html">Central Admin</a></li>
       <li class="green"><a class="green" href="../kra_devref/maint.html">Maintenance</a></li>
- <li class="green"><a class="green" href="../kra_devref/admin.html">System Admin</a></li>
+      <li class="green"><a class="green" href="../kra_devref/admin.html">System Admin</a></li>
     </ul>
-  </div><table id="iframe_portlet_container_table" border="0" cellpadding="0" cellspacing="0" width="100%">
-  <tbody>
-    <tr bgcolor="#ffffff" valign="top">
-      <td class="leftback-focus" width="15">&nbsp;</td>
-      <td class="content" valign="top"><div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Messages Of The Day</h2>
+  </div>
+  <table id="iframe_portlet_container_table" border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tbody>
+      <tr bgcolor="#ffffff" valign="top">
+        <td class="leftback-focus" width="15">&nbsp;</td>
+        <td class="content" valign="top"><div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Messages Of The Day</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body"> <strong>Be Kind and Rewind</strong> </div>
             </div>
           </div>
-          <div class="chan-contain">
-            <div class="body"> <strong>Be Kind and Rewind</strong> </div>
-          </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Proposals</h2>
+          <div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Proposals</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body">
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Create Proposal">Create Proposal</a> </li>
+                  <li> <a class="portal_link" href="#" title="Proposals Enroute">Proposals Enroute</a> </li>
+                  <li> <a class="portal_link" href="#" title="All My Proposals">All My Proposals</a> </li>
+                </ul>
+                <strong>Lists</strong>
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Search Proposals">Search Proposals</a> </li>
+                  <li> <a class="portal_link" href="#" title="Search Proposal Log">Search Proposal Log</a> </li>
+                  <li> <a class="portal_link" href="#" title="Search Institutional Proposals">Search Institutional Proposals</a> </li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="chan-contain">
-            <div class="body">
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Create Proposal">Create Proposal</a> </li>
-                <li> <a class="portal_link" href="#" title="Proposals Enroute">Proposals Enroute</a> </li>
-                <li> <a class="portal_link" href="#" title="All My Proposals">All My Proposals</a> </li>
-              </ul>
-              <strong>Lists</strong>
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Search Proposals">Search Proposals</a> </li>
-                <li> <a class="portal_link" href="#" title="Search Proposal Log">Search Proposal Log</a> </li>
-                <li> <a class="portal_link" href="#" title="Search Institutional Proposals">Search Institutional Proposals</a> </li>
-              </ul>
+          <div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Awards</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body">
+                <ul class="chan">
+                  <li>Awards in Progress</li>
+                  <li> <a class="portal_link" href="#" title="All my Awards">All my Awards</a> </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Awards</h2>
+          <div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Negotiations</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body">
+                <ul class="chan">
+                  <li>All My Negotiations</li>
+                </ul>
+              </div>
+            </div>
+          </div></td>
+        <td class="content" valign="top"><div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Protocols</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body"> <strong>Actions </strong>
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Create Protocol">Create Protocol</a> </li>
+                  <li> <a class="portal_link" href="#" title="Amend or Renew Protocol">Amend or Renew Protocol</a> </li>
+                  <li> <a class="portal_link" href="#" title="Notify IRB on a Protocol">Notify IRB on a Protocol</a> </li>
+                  <li> <a class="portal_link" href="#" title="Request a Status Change on a Protocol">Request a Status Change on a Protocol</a> </li>
+                </ul>
+                <strong>Lists</strong>
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Pending Protocols">Pending Protocols</a> </li>
+                  <li> <a class="portal_link" href="#" title="Protocols Pending PI Action">Protocols Pending PI Action</a> </li>
+                  <li> <a class="portal_link" href="#" title="Protocols Pending Committee Action">Protocols Pending Committee Action</a> </li>
+                  <li> <a class="portal_link" href="#" title="Protocols Under Development">Protocols Under Development</a> </li>
+                  <li> <a class="portal_link" href="#" title="All My Protocols">All My Protocols</a> </li>
+                  <li> <a class="portal_link" href="#" title="Search Protocols">Search Protocols</a> </li>
+                  <li> <a class="portal_link" href="#" title="All My Reviews">All My Reviews</a></li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="chan-contain">
-            <div class="body">
-              <ul class="chan">
-                <li>Awards in Progress</li>
-                <li> <a class="portal_link" href="#" title="All my Awards">All my Awards</a> </li>
-              </ul>
+          <div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Conflict of Interest</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body"> <strong>Actions </strong>
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Create Protocol">Create Disclosure</a></li>
+                  <li><a href="#">Review Final Entities</a></li>
+                </ul>
+                <strong>Lists</strong>
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Pending Protocols">Pending Disclosures</a></li>
+                  <li> <a class="portal_link" href="#" title="Disclosures">Disclosures</a></li>
+                  <li> <a class="portal_link" href="#" title="Disclosures Under Development">Disclosures Under Development</a></li>
+                  <li> <a class="portal_link" href="#" title="All My Disclosures">All My Disclosures</a></li>
+                  <li> <a class="portal_link" href="#" title="Search Disclosures">Search Disclosures</a></li>
+                  <li> <a class="portal_link" href="#" title="All My Reviews">All My Reviews</a></li>
+                  <li> <a class="portal_link" href="#" title="All Financial Interests">All Financial Interests</a></li>
+                </ul>
+              </div>
+            </div>
+          </div></td>
+        <td class="content" valign="top"><div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Quicklinks</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body">
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Pessimistic Lock">Pessimistic Lock</a> </li>
+                  <li> <a class="portal_link" href="#" title="Grants.gov Opportunity Lookup">Grants.gov Opportunity Lookup</a> </li>
+                  <li>Change Password</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Negotiations</h2>
+          <div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Personnel</h2>
+              </div>
+            </div>
+            <div class="chan-contain">
+              <div class="body">
+                <ul class="chan">
+                  <li>Degree Information</li>
+                  <li>Current &amp; Pending Support</li>
+                  <li>Bio-sketches</li>
+                  <li>All my Training</li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="chan-contain">
-            <div class="body">
-              <ul class="chan">
-                <li>All My Negotiations</li>
-              </ul>
+          <div class="portlet">
+            <div class="header">
+              <div class="portlet-title">
+                <h2 class="portlet-title">Workflow</h2>
+              </div>
             </div>
-          </div>
-        </div></td>
-      <td class="content" valign="top"><div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Protocols</h2>
+            <div class="chan-contain">
+              <div class="body">
+                <ul class="chan">
+                  <li> <a class="portal_link" href="#" title="Workflow Services">Preferences</a> </li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="chan-contain">
-            <div class="body"> <strong>Actions </strong>
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Create Protocol">Create Protocol</a> </li>
-                <li> <a class="portal_link" href="#" title="Amend or Renew Protocol">Amend or Renew Protocol</a> </li>
-                <li> <a class="portal_link" href="#" title="Notify IRB on a Protocol">Notify IRB on a Protocol</a> </li>
-                <li> <a class="portal_link" href="#" title="Request a Status Change on a Protocol">Request a Status Change on a Protocol</a> </li>
-              </ul>
-              <strong>Lists</strong>
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Pending Protocols">Pending Protocols</a> </li>
-                <li> <a class="portal_link" href="#" title="Protocols Pending PI Action">Protocols Pending PI Action</a> </li>
-                <li> <a class="portal_link" href="#" title="Protocols Pending Committee Action">Protocols Pending Committee Action</a> </li>
-                <li> <a class="portal_link" href="#" title="Protocols Under Development">Protocols Under Development</a> </li>
-                <li> <a class="portal_link" href="#" title="All My Protocols">All My Protocols</a> </li>
-                <li> <a class="portal_link" href="#" title="Search Protocols">Search Protocols</a> </li>
-                <li> <a class="portal_link" href="#" title="All My Reviews">All My Reviews</a> </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Conflict of Interest</h2>
-            </div>
-          </div>
-          <div class="chan-contain">
-            <div class="body">
-              <strong>Actions </strong>
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Create Protocol">Create Disclosure</a></li>
-                <li><a href="#">Review Final Entities</a></li>
-              </ul>
-              <strong>Lists</strong>
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Pending Protocols">Pending </a><a class="portal_link" href="#" title="Create Protocol">Disclosures</a></li>
-                <li> <a class="portal_link" href="#" title="Create Protocol">Disclosures</a><a class="portal_link" href="#" title="Protocols Pending Committee Action"> Pending Committee Action</a></li>
-                <li> <a class="portal_link" href="#" title="Create Protocol">Disclosures</a><a class="portal_link" href="#" title="Protocols Under Development"> Under Development</a></li>
-                <li> <a class="portal_link" href="#" title="All My Protocols">All My </a><a class="portal_link" href="#" title="Create Protocol">Disclosures</a></li>
-                <li> <a class="portal_link" href="#" title="Search Protocols">Search </a><a class="portal_link" href="#" title="Create Protocol">Disclosures</a></li>
-                <li> <a class="portal_link" href="#" title="All My Reviews">All My Reviews</a></li>
-              </ul>
-            </div>
-          </div>
-        </div></td>
-      <td class="content" valign="top"><div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Quicklinks</h2>
-            </div>
-          </div>
-          <div class="chan-contain">
-            <div class="body">
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Pessimistic Lock">Pessimistic Lock</a> </li>
-                <li> <a class="portal_link" href="#" title="Grants.gov Opportunity Lookup">Grants.gov Opportunity Lookup</a> </li>
-                <li>Change Password</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Personnel</h2>
-            </div>
-          </div>
-          <div class="chan-contain">
-            <div class="body">
-              <ul class="chan">
-                <li>Degree Information</li>
-                <li>Current &amp; Pending Support</li>
-                <li>Bio-sketches</li>
-                <li>All my Training</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Workflow</h2>
-            </div>
-          </div>
-          <div class="chan-contain">
-            <div class="body">
-              <ul class="chan">
-                <li> <a class="portal_link" href="#" title="Workflow Services">Preferences</a> </li>
-              </ul>
-            </div>
-          </div>
-        </div></td>
-    </tr>
-  </tbody>
-</table>
-  
+          </div></td>
+      </tr>
+    </tbody>
+  </table>
   <div class="footerbevel"> &nbsp;</div>
   <div id="footer-copyright">
     <p>Copyright 2005-2008 The Kuali Foundation. All rights reserved.<br>
       Portions of Kuali are copyrighted by other parties as described in the Acknowledgments screen. </p>
-   
   </div>
 </form>
 </body>
